--- a/style.css
+++ b/style.css
@@ -124,7 +124,8 @@ h1 {
 
 .tile.absent {
     background-color: #3a3a3c;
-    border-color: #3a3a3c;
+    /* border-color: #3a3a3c; */
+    border-color: #FFEA00;
 }
 
 #keyboard {
